--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^2.1.1",
     "customize-cra": "^1.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
     "sass": "^1.85.0",
     "sass-loader": "^16.0.5",
