--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "private": true,
   "homepage": "https://Pasha2407.github.io/e-pharmacy/",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "customize-cra": "^1.0.0",
+    "formik": "^2.4.6",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.85.0",
     "sass-loader": "^16.0.5",
     "sass-resources-loader": "^2.2.5",
