--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.85.0",
     "sass-loader": "^16.0.5",
