--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "sass": "^1.85.0",
     "sass-loader": "^16.0.5",
     "sass-resources-loader": "^2.2.5",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
